--- a/notebooks/train-yolo11-object-detection-on-custom-dataset.ipynb
+++ b/notebooks/train-yolo11-object-detection-on-custom-dataset.ipynb
@@ -57,20 +57,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y8cDtxLIBHgQ",
-        "outputId": "67a2e75e-dc06-4d72-c822-602e7992b633"
+        "outputId": "b1d96903-cee3-48cb-e6c6-746962aedd68"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fri Jun 27 02:33:50 2025       \n",
+            "Fri Jun 27 02:41:28 2025       \n",
             "+-----------------------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
             "|-----------------------------------------+------------------------+----------------------+\n",
@@ -79,7 +79,7 @@
             "|                                         |                        |               MIG M. |\n",
             "|=========================================+========================+======================|\n",
             "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   54C    P8             10W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
+            "| N/A   43C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
             "|                                         |                        |                  N/A |\n",
             "+-----------------------------------------+------------------------+----------------------+\n",
             "                                                                                         \n",
@@ -108,18 +108,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CjpPg4mGKc1v",
-        "outputId": "cc886695-afc9-4010-a67e-7dac4b09c980"
+        "outputId": "d6a346eb-c251-4bc5-9973-bb4000c23aa8"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "/content\n"
           ]
@@ -142,21 +142,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tdSMcABDNKW-",
-        "outputId": "daf1c9f5-3bb6-4932-80fc-a69a101f9794"
+        "outputId": "81fc2a4f-151f-43da-f80e-de1b68bf0153"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Ultralytics 8.3.2 🚀 Python-3.10.12 torch-2.4.1+cu121 CUDA:0 (Tesla T4, 15102MiB)\n",
-            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 41.2/112.6 GB disk)\n"
+            "Ultralytics 8.3.40 🚀 Python-3.11.13 torch-2.6.0+cu124 CUDA:0 (Tesla T4, 15095MiB)\n",
+            "Setup complete ✅ (2 CPUs, 12.7 GB RAM, 41.9/112.6 GB disk)\n"
           ]
         }
       ],
@@ -190,49 +190,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FDbMt_M6PiXb",
-        "outputId": "7308a14b-c336-445b-b65d-8c3507a678e7"
+        "outputId": "9002d2f4-bf2a-424a-e1c1-65e2c2b8db2c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Downloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11n.pt to 'yolo11n.pt'...\n",
-            "100% 5.35M/5.35M [00:00<00:00, 95.9MB/s]\n",
-            "WARNING ⚠️ yolo11n.pt appears to require 'dill', which is not in Ultralytics requirements.\n",
-            "AutoInstall will run now for 'dill' but this feature will be removed in the future.\n",
-            "Recommend fixes are to train a new model using the latest 'ultralytics' package or to run a command with an official Ultralytics model, i.e. 'yolo predict model=yolov8n.pt'\n",
-            "\u001b[31m\u001b[1mrequirements:\u001b[0m Ultralytics requirement ['dill'] not found, attempting AutoUpdate...\n",
-            "Collecting dill\n",
-            "  Downloading dill-0.3.9-py3-none-any.whl.metadata (10 kB)\n",
-            "Downloading dill-0.3.9-py3-none-any.whl (119 kB)\n",
-            "   ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ 119.4/119.4 kB 5.0 MB/s eta 0:00:00\n",
-            "Installing collected packages: dill\n",
-            "Successfully installed dill-0.3.9\n",
+            "Downloading https://github.com/ultralytics/assets/releases/download/v8.3.0/yolo11m.pt to 'yolo11m.pt'...\n",
+            "100% 38.8M/38.8M [00:00<00:00, 254MB/s]\n",
+            "Ultralytics 8.3.40 🚀 Python-3.11.13 torch-2.6.0+cu124 CUDA:0 (Tesla T4, 15095MiB)\n",
+            "YOLO11m summary (fused): 303 layers, 20,091,712 parameters, 0 gradients, 68.0 GFLOPs\n",
             "\n",
-            "\u001b[31m\u001b[1mrequirements:\u001b[0m AutoUpdate success ✅ 2.3s, installed 1 package: ['dill']\n",
-            "\u001b[31m\u001b[1mrequirements:\u001b[0m ⚠️ \u001b[1mRestart runtime or rerun command for updates to take effect\u001b[0m\n",
-            "\n",
-            "Ultralytics 8.3.2 🚀 Python-3.10.12 torch-2.4.1+cu121 CUDA:0 (Tesla T4, 15102MiB)\n",
-            "YOLO11n summary (fused): 238 layers, 2,616,248 parameters, 0 gradients, 6.5 GFLOPs\n",
-            "\n",
-            "Downloading https://media.roboflow.com/notebooks/examples/dog.jpeg to 'dog.jpeg'...\n",
-            "100% 104k/104k [00:00<00:00, 44.7MB/s]\n",
-            "image 1/1 /content/dog.jpeg: 640x384 2 persons, 1 car, 1 dog, 1 handbag, 61.4ms\n",
-            "Speed: 11.7ms preprocess, 61.4ms inference, 773.5ms postprocess per image at shape (1, 3, 640, 384)\n",
-            "Results saved to \u001b[1mruns/detect/predict\u001b[0m\n",
+            "Found https://media.roboflow.com/notebooks/examples/dog.jpeg locally at dog.jpeg\n",
+            "image 1/1 /content/dog.jpeg: 640x384 1 person, 1 car, 1 dog, 2 backpacks, 59.1ms\n",
+            "Speed: 1.9ms preprocess, 59.1ms inference, 173.3ms postprocess per image at shape (1, 3, 640, 384)\n",
+            "Results saved to \u001b[1mruns/detect/predict2\u001b[0m\n",
             "💡 Learn more at https://docs.ultralytics.com/modes/predict\n"
           ]
         }
       ],
       "source": [
-        "!yolo task=detect mode=predict model=yolo11n.pt conf=0.25 source='https://media.roboflow.com/notebooks/examples/dog.jpeg' save=True"
+        "!yolo task=detect mode=predict model=yolo11m.pt conf=0.25 source='https://media.roboflow.com/notebooks/examples/dog.jpeg' save=True"
       ]
     },
     {
@@ -487,61 +472,79 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BSd93ZJzZZKt",
-        "outputId": "0b202b45-346d-4d1b-c3d5-845627d7063c"
+        "outputId": "e6c76f8b-2ca6-494c-ca1d-d4424c7a8646"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "/content/datasets\n",
+            "Requirement already satisfied: roboflow in /usr/local/lib/python3.11/dist-packages (1.1.66)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.11/dist-packages (from roboflow) (2025.6.15)\n",
+            "Requirement already satisfied: idna==3.7 in /usr/local/lib/python3.11/dist-packages (from roboflow) (3.7)\n",
+            "Requirement already satisfied: cycler in /usr/local/lib/python3.11/dist-packages (from roboflow) (0.12.1)\n",
+            "Requirement already satisfied: kiwisolver>=1.3.1 in /usr/local/lib/python3.11/dist-packages (from roboflow) (1.4.8)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.11/dist-packages (from roboflow) (3.10.0)\n",
+            "Requirement already satisfied: numpy>=1.18.5 in /usr/local/lib/python3.11/dist-packages (from roboflow) (2.0.2)\n",
+            "Requirement already satisfied: opencv-python-headless==4.10.0.84 in /usr/local/lib/python3.11/dist-packages (from roboflow) (4.10.0.84)\n",
+            "Requirement already satisfied: Pillow>=7.1.2 in /usr/local/lib/python3.11/dist-packages (from roboflow) (11.2.1)\n",
+            "Requirement already satisfied: pillow-heif>=0.18.0 in /usr/local/lib/python3.11/dist-packages (from roboflow) (0.22.0)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.11/dist-packages (from roboflow) (2.9.0.post0)\n",
+            "Requirement already satisfied: python-dotenv in /usr/local/lib/python3.11/dist-packages (from roboflow) (1.1.1)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.11/dist-packages (from roboflow) (2.32.3)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.11/dist-packages (from roboflow) (1.17.0)\n",
+            "Requirement already satisfied: urllib3>=1.26.6 in /usr/local/lib/python3.11/dist-packages (from roboflow) (2.4.0)\n",
+            "Requirement already satisfied: tqdm>=4.41.0 in /usr/local/lib/python3.11/dist-packages (from roboflow) (4.67.1)\n",
+            "Requirement already satisfied: PyYAML>=5.3.1 in /usr/local/lib/python3.11/dist-packages (from roboflow) (6.0.2)\n",
+            "Requirement already satisfied: requests-toolbelt in /usr/local/lib/python3.11/dist-packages (from roboflow) (1.0.0)\n",
+            "Requirement already satisfied: filetype in /usr/local/lib/python3.11/dist-packages (from roboflow) (1.2.0)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->roboflow) (1.3.2)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->roboflow) (4.58.4)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.11/dist-packages (from matplotlib->roboflow) (24.2)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.11/dist-packages (from matplotlib->roboflow) (3.2.3)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.11/dist-packages (from requests->roboflow) (3.4.2)\n",
             "loading Roboflow workspace...\n",
             "loading Roboflow project...\n"
           ]
         },
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "Downloading Dataset Version Zip in 两点钟模型-3 to yolov11:: 100%|██████████| 22514/22514 [00:00<00:00, 28912.99it/s]"
+            "Downloading Dataset Version Zip in yolov8-4 to yolov11:: 100%|██████████| 16622/16622 [00:00<00:00, 39679.77it/s]"
           ]
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "\n"
           ]
         },
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "\n",
-            "Extracting Dataset Version Zip to 两点钟模型-3 in yolov11:: 100%|██████████| 2612/2612 [00:00<00:00, 5820.46it/s]\n"
+            "Extracting Dataset Version Zip to yolov8-4 in yolov11:: 100%|██████████| 409/409 [00:00<00:00, 6413.33it/s]\n"
           ]
         }
       ],
       "source": [
-        "!mkdir {HOME}/datasets\n",
-        "%cd {HOME}/datasets\n",
+        "!pip install roboflow\n",
         "\n",
-        "from google.colab import userdata\n",
         "from roboflow import Roboflow\n",
-        "\n",
-        "ROBOFLOW_API_KEY = userdata.get('ROBOFLOW_API_KEY')\n",
-        "rf = Roboflow(api_key=ROBOFLOW_API_KEY)\n",
-        "\n",
-        "workspace = rf.workspace(\"liangdianzhong\")\n",
-        "project = workspace.project(\"-qvdww\")\n",
-        "version = project.version(3)\n",
-        "dataset = version.download(\"yolov11\")"
+        "rf = Roboflow(api_key=\"xrVjl0Pigtg1YYSg93U8\")\n",
+        "project = rf.workspace(\"cars-df090\").project(\"yolov8-crfey-qf01k\")\n",
+        "version = project.version(4)\n",
+        "dataset = version.download(\"yolov11\")\n",
+        ""
       ]
     },
     {
@@ -563,7 +566,7 @@
       "source": [
         "%cd {HOME}\n",
         "\n",
-        "!yolo task=detect mode=train model=yolo11s.pt data={dataset.location}/data.yaml epochs=10 imgsz=640 plots=True"
+        "!yolo task=detect mode=train model=yolo11m.pt data={dataset.location}/data.yaml epochs=10 imgsz=640 plots=True"
       ]
     },
     {
